--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>JD online store - {% block title %} {% endblock title %}</title>
+        <title>Super-pupper news portal - {% block title %} {% endblock title %}</title>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
@@ -14,7 +14,7 @@
         <!-- Responsive navbar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
    <div class="container">
-       <a class="navbar-brand" href="#">JD online store</a>
+       <a class="navbar-brand" href="#">Super-pupper news portal</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse"
                data-target="#navbarResponsive"
                aria-controls="navbarResponsive" aria-expanded="false"
