--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -7,7 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Super-pupper news portal - {% block title %} {% endblock title %}</title>
+        <title>Super-pupper news portal -
+            {% block title %}
+            {% endblock title %}
+        </title>
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
@@ -21,7 +24,9 @@
                aria-controls="navbarResponsive" aria-expanded="false"
                aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
+
        </button>
+
        <div class="collapse navbar-collapse" id="navbarResponsive">
            <ul class="navbar-nav ml-auto">
                <li class="nav-item active">
@@ -38,6 +43,16 @@
                <li class="nav-item">
                    <a class="nav-link" href="/news/">News</a>
                </li>
+               {% if request.user.is_authenticated %}
+                   <li class="nav-item">
+                       <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
+                   </li>
+               {% else%}
+                   <li class="nav-item">
+                       <a class="nav-link" href="{% url 'account_login' %}">Sign In</a>
+                   </li>
+               {% endif %}
+
            </ul>
        </div>
    </div>
@@ -51,5 +66,6 @@
                 </div>
             </div>
         </div>
+
     </body>
 </html>
