--- a/NewsPaper/templates/flatpages/news.html
+++ b/NewsPaper/templates/flatpages/news.html
@@ -41,12 +41,21 @@
    </form>
 
     <hr>
+    {# Теперь будем проверять не request.user.is_authenticated, а конкретные права #}
+    {% if perms.news.add_post %}
+    <a href="{% url 'post_create' %}">Добавить post</a>
+    {% endif %}
     {% if posts %}
         <table>
             <tr>
                 <td>Data</td>
                 <td>Title</td>
                 <td>Text</td>
+
+                {# Условие получается составным. #}
+                {% if perms.news.change_post or perms.news.delete_post %}
+                <td>Actions</td>
+                {% endif %}
            </tr>
 
            {% for post in posts %}
@@ -54,6 +63,16 @@
                <td>{{ post.dateCreation|date:'d M Y' }}</td>
                <td>{{ post.title|censor}}</td>
                <td>{{ post.text|truncatewords:20|censor }}</td>
+
+                <td>
+                    {# А здесь доступ для каждой ссылки теперь будем проверять отдельно #}
+                    {% if perms.news.change_post %}
+                    <a href="{% url 'post_update' pk=post.id %}">Change</a>
+                    {% endif %}
+                    {% if perms.news.delete_post %}
+                    <a href="{% url 'post_delete' post.id %}">Delete</a>
+                    {% endif %}
+                </td>
            </tr>
            {% endfor %}
 
