--- a/NewsPaper/templates/registration/password_reset.html
+++ b/NewsPaper/templates/registration/password_reset.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'flatpages/default.html' %}
+
+{% block content %}
+  <h2>Forgot Password</h2>
+  <form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Reset password</button>
+  </form>
+{% endblock %}
