--- a/NewsPaper/templates/flatpages/news.html
+++ b/NewsPaper/templates/flatpages/news.html
@@ -43,7 +43,7 @@
     <hr>
     {# Теперь будем проверять не request.user.is_authenticated, а конкретные права #}
     {% if perms.news.add_post %}
-    <a href="{% url 'post_create' %}">Добавить post</a>
+    <a href="{% url 'post_create' %}">Add new post</a>
     {% endif %}
     {% if posts %}
         <table>
@@ -51,18 +51,26 @@
                 <td>Data</td>
                 <td>Title</td>
                 <td>Text</td>
+                <td>Category</td>
 
+                <td>
                 {# Условие получается составным. #}
                 {% if perms.news.change_post or perms.news.delete_post %}
+                </td>
                 <td>Actions</td>
                 {% endif %}
            </tr>
-
            {% for post in posts %}
            <tr>
                <td>{{ post.dateCreation|date:'d M Y' }}</td>
                <td>{{ post.title|censor}}</td>
                <td>{{ post.text|truncatewords:20|censor }}</td>
+
+               <td>
+                   {% for cat in news.category.all %}
+                   <a >{{ category.name }}</a>
+                   {% endfor %}
+               </td>
 
                 <td>
                     {# А здесь доступ для каждой ссылки теперь будем проверять отдельно #}
