--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -43,6 +43,9 @@
                <li class="nav-item">
                    <a class="nav-link" href="/news/">News</a>
                </li>
+               <li class="nav-item">
+                   <a class="nav-link" href="/news/subscriptions/">My subscriptions</a>
+               </li>
                {% if request.user.is_authenticated %}
                    <li class="nav-item">
                        <a class="nav-link" href="{% url 'account_logout' %}">Sign Out</a>
